fix navbar overlap with section title on phones

--- a/_sass/_landing.scss
+++ b/_sass/_landing.scss
@@ -1,6 +1,9 @@
 .landing-box {
   box-shadow: 0 0 1rem 0 rgba(0,0,0,0.2);
-  padding: 2rem;
+  padding: 10rem 2rem 2rem 2rem;
+  @media screen and (min-width: 425px) {
+    padding: 4rem 2rem 4rem 2rem;
+  }
   min-height: 100vh;
   display: flex;
   flex-wrap: wrap;
@@ -35,6 +38,7 @@
   text-transform: uppercase;
   display: block;
   margin: 0.5rem 0;
+  font-weight: 300;
 }
 
 .site-title {
